--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 h1{
     color: red;
 }
+
+.flex-container > div {
+    background-color: #f1f1f1;
+    margin: 10px;
+    padding: 20px;
+    font-size: 30px;
+  }
+  .flex-container {
+    display: flex;
+    background-color: DodgerBlue;
+  }
